--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,31 @@ input[type="search"]{
     text-align: center;
     color: #4CAF50;
 }
+.liste{
+    color: #4CAF50;
+    list-style-type:none;
+    font-size: 1.5rem;
+}
+.artist{
+    color: white;
+    font-size: 1.5rem;
+}
+.songs{
+    color: white;
+    font-size: 1.5rem;
+}
+li{
+    color: #4CAF50;
+    list-style-type:none;
+    font-size: 1.5rem;
+}
+
+/*
+"id": 2004,
+    "title": "Let It Be",
+    "released": "1970-03-06 00:00:00",
+    "text": "Let It Be",
+    "youtube_id": "2xDzVZcqtYI",
+    "pivot": {
+      "artist_id": 12,
+      "song_id": 2004*/
